Updated about me page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
   <body>
     <div class="main-content">
       {{>header}}
+      <p>Hi, I'm Jana. I design and code beautifully simple things, and I love what I do. This website uses data from mapbox.com and darksky.net</p>
       <img class="portrait" src="/img/zcamera-20161026_232945.jpg"> 
     </div>
 
