Add content to the help page

--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -11,7 +11,7 @@
           {{>header}}
 
     <p>
-      {{message}}
+      Weather forecast, which has accurate weather information for anytime and everywhere.By weather information, you can prepare your plan carefully, you will be successful at work and have better life. The application is very helpful with everybody. 
     </p>
     </div>
 
