--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,7 +1,7 @@
 
 <header>
   <h1>{{title}}</h1>
-  <a href="/">Weather</a>
-  <a href="/about">About</a>
-  <a href="/help">Help</a>
+  <a id="weather"href="/">Weather</a>
+  <a id="about" href="/about">About</a>
+  <a id="help" href="/help">Help</a>
 </header>
