--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,15 @@
+/* LOADER STYLES*/
+
+#loader {
+  width: 100%;
+  height: 100%;
+  margin:0;
+  padding: 0;
+  background-color: #242F3F;
+}
+/* END OF LOADER STYLES*/
+
+
 body {
   color: #333333;
   font-family: arial;
@@ -10,15 +22,37 @@ body {
   min-height: 100vh;
 }
 
+#main {
+  display: none;
+}
+
+p {
+  font-weight: 700;
+}
+
+#help {
+  font-weight: 400;
+}
+
 .main-content {
   flex-grow: 1;
 }
 
+#messageTwo {
+  color: black;
+  opacity: 0.8;
+}
+
 footer {
-  color: #888888;
-  border-top: 1px solid #eeeeee;
+  color: #333333;
   margin-top: 16px;
   padding: 16px 0;
+  font-weight: 400;
+}
+
+#footer {
+  font-weight: 400;
+  float: right;
 }
 
 header {
@@ -32,7 +66,7 @@ h1 {
 }
 
 header a {
-  color: #888888;
+  color:  #333333;
   margin-right: 16px;
   text-decoration: none;
 }
@@ -42,19 +76,40 @@ header a {
 }
 
 input {
-  border: 1px solid #cccccc;
+  background: transparent;
+  border: 1px solid black;
   padding: 8px;
+  opacity: 1;
+  color:  #333333;
+  font-weight: 700;
+}
 
+input::placeholder {
+  color: #333333;
+  font-weight: 400;
 }
 
 button {
   cursor: pointer;
-  border: 1px solid #888888;
-  background: #888888;
+  border: 1px solid #333333;
+  background:  #333333;
   color: white;
   padding: 8px;
 }
 
+*:focus {
+  outline: none;
+}
+
 .underlined {
-  border-bottom: 1px solid #888888;
+  border-bottom: 1px solid #333333;
+}
+
+#rainVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%; 
+  min-height: 100%;
+  z-index: -100;
 }
