--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -8,17 +8,30 @@
     <link rel="icon" href="/img/download.png">
   </head>
   <body>
-    <div class="main-content">
-      {{>header}}
-      <form>
-        <input placeholder="Location">
-        <button>Serach</button>
-      </form>
-      <p id="messageOne"></p>
-      <p id="messageTwo"></p>
+    <div id="loader">
+      <span class="loader"><span class="loader-inner"></span></span>
     </div>
-    
-    {{>footer}}
+    <div id="main">
+      <!-- The video -->
+      <video autoplay muted loop id="rainVideo">
+        <source src="/video/rain.mp4" type="video/mp4">
+      </video>
+      <div class="main-content">
+        {{>header}}
+        <form>
+          <input placeholder="Location">
+          <button>Serach</button>
+        </form>
+        <p id="messageOne"></p>
+        <p id="messageTwo"></p>
+      </div>
+      
+      {{>footer}}
+    </div>
+    <script
+  src="https://code.jquery.com/jquery-3.3.1.js"
+  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  crossorigin="anonymous"></script>
     <script src="/js/app.js"></script>
   </body>
 </html>
